UIDATIMP-76: Handle horizontal scroll issue for the file extensions list

--- a/src/components/SearchAndSort/SearchAndSort.css
+++ b/src/components/SearchAndSort/SearchAndSort.css
@@ -18,3 +18,13 @@
 .searchButtonWrap {
   flex-shrink: 0;
 }
+
+.paneBody {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.searchResults {
+  flex-grow: 1;
+}
